fix: glass style no longer working on FAB on mobile

--- a/src/Styles/fab.css
+++ b/src/Styles/fab.css
@@ -162,6 +162,7 @@ body.is-mobile button.cg-note-toolbar-fab[data-fab-metadata*="mgls"] {
     }
     .is-mobile & {
         &:is(:active, :hover, :focus-visible) {
+            background: unset !important;
             background-color: var(--ntb-liquid-glass-background) !important;
             color: var(--text-normal) !important;
         }
